src/objects/edynamics__Chatter_Archive__c.object
<CustomObject>
    <description>Chatter_Archive temporary storage</description>
    <fields>
        <fullName>edynamics__Body__c</fullName>
        <label>Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>edynamics__CommentCount__c</fullName>
        <label>CommentCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>edynamics__CommentLinkedToFeedId__c</fullName>
        <label>CommentLinkedToFeedId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__ContentDescription__c</fullName>
        <label>ContentDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>edynamics__ContentFileName__c</fullName>
        <label>ContentFileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__ContentSize__c</fullName>
        <label>ContentSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>edynamics__ContentType__c</fullName>
        <label>ContentType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__FeedId__c</fullName>
        <label>FeedId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__IDB__c</fullName>
        <label>IDB</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>edynamics__InsertedByDate__c</fullName>
        <label>InsertedByDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__InsertedByID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InsertedByID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chatter_Archives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>edynamics__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>edynamics__LikeCount__c</fullName>
        <label>LikeCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>edynamics__LinkUrl__c</fullName>
        <label>LinkUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>edynamics__ParentID__c</fullName>
        <label>ParentID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>edynamics__Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>edynamics__Type__c</fullName>
        <label>Type</label>
        <type>TextArea</type>
    </fields>
    <label>Chatter_Archive</label>
    <nameField>
        <label>Chatter_Archive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter_Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>